# Capture

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Info.plist  README.md
cmake/: mingw64-toolchain.cmake
src/: mac-listen.cpp  windows-capture.cpp
utils/: CMakeLists.txt  protocol.hpp  translate.hpp
